--- a/fortyeightproject/src/components/Weather.css
+++ b/fortyeightproject/src/components/Weather.css
@@ -9,7 +9,7 @@ body {
 }
 
 .app {
-  background-image: url("./assets/weather.jpg");
+  background-image: url("../assets/weather.jpg");
   background-size: cover;
   background-position: bottom;
   transition: 0.4 ease-out;
@@ -106,4 +106,12 @@ main {
   color: white;
   cursor: pointer;
   margin: 5px auto;
+}
+
+h3 {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
